skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_paused.snap
---
source: tests/snapshot_overview.rs
expression: "render_fixture(\"paused\")"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-paused  ·  Master pi at /repo/demo  ·  daemon: file-mode  ·  uptime 3h10m  ·  Adhoc 0 · Issue 1 · Workflow 0  ·  2m old  $0.00 · 0 turns · in 0 / out 0             moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" PAUSED FOR USER · VST-202 · scope-creep-detected · Actual files exceed declared scope. Continue, descope, or abort?                                                                                    "
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Costs │ Daemon                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions (1 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ detail ──────────────────────────────────┐"
"│Status                    ││Kind    State            Harness    Title          Cost           PR/worktree    Age      Decision                Activity    ││Resolve scope creep                       │"
"│▸ Needs input        1    ││ISS     Needs input      pi         Resolve scope  —              PR #88 · vst-2 2h05m    scope-creep-detected    2m          ││VST-202  ·  Issue  ·  Needs input         │"
"│                          ││                                                                                                                              ││substate: paused for user                 │"
"│Merge queue               ││                                                                                                                              ││                                          │"
"│1. VST-202  Needs input   ││                                                                                                                              ││Where                                     │"
"│                          ││                                                                                                                              ││pane    %42                               │"
"│Conflicts                 ││                                                                                                                              ││worktree                                  │"
"│• VST-202 ↔ VST-203       ││                                                                                                                              ││/repo/worktrees/vst-202                   │"
"│                          ││                                                                                                                              ││cwd     /repo/worktrees/vst-202           │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Issue                                     │"
"│                          ││                                                                                                                              ││PR #88                                    │"
"│                          ││                                                                                                                              ││scope declared=3 actual=12 (4.0x bigger   │"
"│                          ││                                                                                                                              ││than declared)                            │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Paused                                    │"
"│                          ││                                                                                                                              ││reason: scope-creep-detected              │"
"│                          ││                                                                                                                              ││prompt: Actual files exceed declared      │"
"│                          ││                                                                                                                              ││scope. Continue, descope, or abort?       │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Cost                                      │"
"│                          ││                                                                                                                              ││cost      — (no source)                   │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Recent decisions                          │"
"│                          ││                                                                                                                              ││• scope-creep-detected → Escalated to user│"
"│                          ││                                                                                                                              ││Click any decision for full text          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Actions                                   │"
"│                          ││                                                                                                                              ││[ Focus tmux window ]                     │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   D prune   g focus   / filter   ⇧M compact   ? help   q quit                                                                       noise: hidden  ·  filter: off"
"                                                                                                                                                                                                        "
